<resources>
    <string name="app_name">Mi primera calculadora</string>
    <string name="_0">0</string>
    <string name="_mas">+</string>
    <string name="menos">-</string>
    <string name="multi">*</string>
    <string name="divi">/</string>
    <string name="ingresa_el_valor_1">Ingresa el valor 1</string>
    <string name="ingresa_el_valor_2">ingresa el valor 2</string>
    <string name="Borrar">C</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
</resources>